config: avoid flash of invisible text

--- a/styles/fonts-maru.css
+++ b/styles/fonts-maru.css
@@ -2,6 +2,7 @@
   font-family: 'GT Maru Regular';
   src: url('/fonts/maru/GT-Maru-Regular-Trial.woff2') format('woff2'),
     url('/fonts/maru/GT-Maru-Light-Trial.woff2') format('woff2');
+  font-display: swap;
 }
 
 @font-face {
@@ -9,4 +10,5 @@
   src: url('/fonts/maru/GT-Maru-Mono-Regular-Trial.woff2') format('woff2'),
     url('/fonts/maru/GT-Maru-Mono-Regular-Oblique-Trial.woff2') format('woff2'),
     url('/fonts/maru/GT-Maru-Mono-Bold-Trial.woff2') format('woff2');
+  font-display: swap;
 }
